# exemploMVC/src/routes/loginRoute.js
@@ -4,4 +4,6 @@ const router = express.Router()
 const loginController = require('../controllers/loginController')
 router.get("/login",loginController.getLogin)
 router.get('/logged', loginController.getIslogged)
+router.post('/create',loginController.createUser);
+router.get('/users/:id',loginController.getbyId);
 module.exports = router
